--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,6 +51,35 @@ jobs:
       env:
         DATABASE_URL: postgres://postgres:postgres5261285@localhost:5432/postgres
 
-    
+  
+
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.11.2
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11.2
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Deploy To Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.438j9dsigj3t3e }}
+          heroku_app_name: ${{ secrets.myapp }}
+          heroku_email: ${{ gdfagdfg@gmail.com }}
+          usedocker: true
+        env:
+          HEROKU_API_KEY: ${{ secrets.83ug98j39jg }}
 
 
